--- a/index.html
+++ b/index.html
@@ -4,17 +4,43 @@
     <meta charset="utf-8">
     <title>My Unity WebXR Project</title>
     <style>
-        body { margin: 0; padding: 0; background: #231F20; }
-        #unity-container { width: 100%; height: 100vh; overflow: hidden; }
-        canvas { width: 100%; height: 100%; background: #231F20; }
+        body {
+            margin: 0;
+            padding: 0;
+            background: #231F20;
+            overflow: hidden;
+        }
+        #unity-container {
+            width: 100%;
+            height: 100vh;
+            position: relative;
+        }
+        canvas {
+            width: 100%;
+            height: 100%;
+            background: #231F20;
+            display: block;
+        }
+        #loading-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-family: sans-serif;
+            font-size: 20px;
+        }
     </style>
+    <!-- Load WebXR polyfill before Unity loader -->
+    <script src="vendor/webxr-polyfill.min.js"></script>
     <script src="Build/WebXR-23-38.loader.js"></script>
-    <script src="webxr.js"></script> <!-- Add if needed -->
 </head>
 <body>
     <div id="unity-container">
         <canvas id="unity-canvas"></canvas>
+        <div id="loading-text">Loading...</div>
     </div>
+
     <script>
         window.addEventListener('load', () => {
             const buildUrl = "Build";
@@ -29,14 +55,16 @@
             };
 
             const canvas = document.querySelector("#unity-canvas");
+            const loadingText = document.getElementById("loading-text");
 
             createUnityInstance(canvas, config, (progress) => {
-                document.getElementById("unity-container").innerText = `Loading... ${Math.round(progress * 100)}%`;
+                loadingText.innerText = `Loading... ${Math.round(progress * 100)}%`;
             }).then((unityInstance) => {
-                console.log("Unity WebXR loaded!");
+                console.log("✅ Unity WebXR loaded!");
+                loadingText.style.display = "none";
             }).catch((message) => {
-                console.error(message);
-                alert("Failed to load Unity WebXR build: " + message);
+                console.error("❌ Failed to load Unity WebXR build:", message);
+                loadingText.innerText = "❌ Failed to load WebXR build.";
             });
         });
     </script>
